[package]
name = "crud_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.1", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tower = {version = "0.5.1", features = ["full"]} 